<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonMain"
            android:id="@+id/buttonBackToMainActivity"
            android:onClick="onClickBackToMain"/>

        </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_fan_on_text"
            android:id="@+id/buttonFanOn"
            android:onClick="onClickFanOn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_fan_off_text"
            android:id="@+id/buttonFanOff"
            android:onClick="onClickFanOff"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LED ON"
            android:id="@+id/buttonLEDOn"
            android:onClick="onClickLEDOn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LED OFF"
            android:id="@+id/buttonLEDOff"
            android:onClick="onClickLEDOff"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Check temp"
        android:id="@+id/buttonCheckTemp"
        android:onClick="onClickCheckTemp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_temperature_textview"/>
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/EditTextGetTemp"/>
    </LinearLayout>


</LinearLayout>