<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonMain"
            android:id="@+id/buttonBackToMainActivity"
            android:onClick="onClickBackToMain"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonParameters"
            android:id="@+id/buttonToParameters"
            android:onClick="onClickToParameters"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonPID"
            android:id="@+id/buttonToPID"
            android:onClick="onClickToPID"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonControl"
            android:id="@+id/buttonToControl"
            android:onClick="onClickToControl"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:textSize="14sp"
            android:text="Patient id:"/>
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/filenameEditText"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Send data to email"
            android:textAllCaps="false"
            android:id="@+id/buttonSendData"
            android:onClick="onClickSendData"/>
    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:id="@+id/lineChart" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fillViewport="true"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation= "horizontal">

                <Button
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonRun"
                    android:text="@string/button_Run"
                    android:textAllCaps="false"
                    android:onClick="onClickRun"
                    android:textColor="@color/colorStart"/>
                <Button
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:id= "@+id/buttonStop"
                    android:text = "@string/button_Stop"
                    android:textAllCaps="false"
                    android:textColor="@color/colorStop"
                    android:onClick="onClickStop"/>
                <Button
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonClear"
                    android:textAllCaps="false"
                    android:id="@+id/buttonClear"
                    android:onClick="onClickClear"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Number of cycles:"
                    android:paddingBottom="5dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextNumberOfCycles"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="Current Cycle : "
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewCurrentCycle"/>
            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/current_temperature_textview"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewCurrentTemperature"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/cycle_time_elapsed_s"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:id= "@+id/timeElapsedTextView"/>



            </LinearLayout>




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"/>

        </LinearLayout>


    </ScrollView>


</LinearLayout>