<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonMain"
            android:id="@+id/buttonBackToMainActivity"
            android:onClick="onClickBackToMain"/>

    </LinearLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preheat_1PID_Text_View"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kp"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:id="@+id/editTextFirstPreheatPID0"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ki"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:id="@+id/editTextFirstPreheatPID1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kd"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:id="@+id/editTextFirstPreheatPID2"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="90dp"
            android:paddingLeft="90dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preheat_2PID_Text_View"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kp"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:id="@+id/editTextSecondPreheatPID0"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ki"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:id="@+id/editTextSecondPreheatPID1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kd"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:id="@+id/editTextSecondPreheatPID2"/>
            </LinearLayout>
        </LinearLayout>

        </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/denaturePID_Text_View"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kp"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:id="@+id/editTextDenaturePID0"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ki"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:id="@+id/editTextDenaturePID1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kd"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:id="@+id/editTextDenaturePID2"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="90dp"
            android:paddingLeft="90dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/annealingPID_Text_View"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kp"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:id="@+id/editTextAnnealingPID0"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ki"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:id="@+id/editTextAnnealingPID1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kd"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:id="@+id/editTextAnnealingPID2"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extensionPID_Text_View"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kp"
                android:paddingBottom="10dp"/>
            <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/editTextExtensionPID0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ki"
                android:paddingBottom="10dp"/>
            <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/editTextExtensionPID1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kd"
                android:paddingBottom="10dp"/>
            <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/editTextExtensionPID2"/>
        </LinearLayout>
    </LinearLayout>







</LinearLayout>